--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React + Craft Demo</title>
+    <meta name="description" content="Prototyping React and a headless Craft CMS structure">
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600&display=swap" rel="stylesheet">
+
+    <!-- Reset CSS -->
+    <style>
+        *,
+        *::before,
+        *::after{
+            box-sizing: border-box;
+            -webkit-tap-highlight-color: transparent;
+            border: none;
+            outline: none;
+            position: relative;
+        }
+        html, body, div, span, button, applet, object, input, textarea, select iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed,  figure, figcaption, footer, header, hgroup,  menu, nav, output, ruby, section, summary, time, mark, audio, video {  
+            position: relative;
+            margin: 0;
+            padding: 0;  
+            border: 0;  
+            font-size: 100%;
+            font: inherit;  
+            vertical-align: baseline; 
+            outline: none;
+            box-shadow: none;
+            text-decoration: none;
+            color: inherit;
+            background-color: transparent;
+        }
+        input::-webkit-inner-spin-button,
+        input::-webkit-outer-spin-button,
+        input[type=number]{
+            -webkit-appearance: none;
+            -moz-appearance: textfield;
+        }
+        template{
+            display: none !important;
+        }
+        body,
+        main{
+            overflow-x: hidden;
+            display: block;
+            width: 100vw;
+            min-height: 100vh;
+            font-family: 'Montserrat', sans-serif;
+        }
+        main *{
+            display: inline-block;
+        }
+        button{
+            user-select: none;
+        }
+        :root{
+            font-size: 100%;
+        }
+    </style>
 </head>
 <body>
     <noscript>
 		You need to enable JavaScript to run this app.
 	</noscript>
-	<root-view></root-view>
+	<main></main>
 </body>
 </html>
